--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,3 +7,7 @@
   .font-inter{
     font-family: "Inter", sans-serif;
 }
+.seat button, .seat p, .seat div{
+color: #03071280; 
+align-items: center;
+}
